force-app/main/default/objects/Contact/fields/Amount_X__c.field-meta.xml
<CustomField>
    <fullName>Amount_X__c</fullName>
    <label>Amount_X</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>