force-app/main/default/objects/Contact/fields/Amount_Y__c.field-meta.xml
<CustomField>
    <fullName>Amount_Y__c</fullName>
    <label>Amount_Y</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>