force-app/main/default/objects/Contact/fields/Contact_Self_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Contact_Self_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Self Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>