force-app/main/default/objects/Contact/fields/Count_isActive__c.field-meta.xml
<CustomField>
    <fullName>Count_isActive__c</fullName>
    <label>Count isActive</label>
    <summaryFilterItems>
        <field>Address__c.isActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Address__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>