force-app/main/default/objects/Contact/fields/Detail1__c.field-meta.xml
<CustomField>
    <fullName>Detail1__c</fullName>
    <label>Detail1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>