force-app/main/default/objects/Contact/fields/Profile2__c.field-meta.xml
<CustomField>
    <fullName>Profile2__c</fullName>
    <formula>IF( NOT( ISBLANK(Account.Website)), Account.Website + &apos;/&apos; + left(FirstName, 1) + LastName, &apos;website name not mantion&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile2</label>
    <type>Text</type>
</CustomField>