force-app/main/default/objects/Contact/fields/qa__c.field-meta.xml
<CustomField>
    <fullName>qa__c</fullName>
    <formula>CASE(Account.Rating,
  &quot;Hot&quot;, 1,
  &quot;Warm&quot;,  2,
  &quot;Cold&quot;,  3,
4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>qa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>