force-app/main/default/objects/Contact/fields/TesTTest_Date__c.field-meta.xml
<CustomField>
    <fullName>TesTTest_Date__c</fullName>
    <inlineHelpText>DateField Test</inlineHelpText>
    <label>TesTTest Date</label>
    <type>Date</type>
</CustomField>