force-app/main/default/objects/Contact/recordTypes/Condidates.recordType-meta.xml
<RecordType>
    <fullName>Condidates</fullName>
    <active>true</active>
    <label>Condidates</label>
</RecordType>