force-app/main/default/objects/Contact/validationRules/Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Email</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( Email, &apos;yahoo.com&apos;)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Yahoo email not valid</errorMessage>
</ValidationRule>